[metadata]
name = spectrumdevice
description = A high-level, object-oriented Python API for controlling Spectrum Instruments digitisers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/KCL-BMEIS/spectrumdevice
author = Christian Baker, Francois Joubert
author_email = christian.baker@kcl.ac.uk,
license = MIT
license_file = LICENSE
classifiers =
 Development Status :: 3 - Alpha
 Intended Audience :: Science/Research
 License :: OSI Approved :: MIT License
 Natural Language :: English
 Operating System :: POSIX :: Linux
 Operating System :: Microsoft :: Windows :: Windows 10
 Operating System :: MacOS :: MacOS X
 Programming Language :: Python :: 3.8
 Programming Language :: Python :: 3.9
 Programming Language :: Python :: 3.10
 Topic :: Scientific/Engineering
 Typing :: Typed
project_urls =
 Documentation = https://kcl-bmeis.github.io/spectrumdevice/
 Source = https://github.com/KCL-BMEIS/spectrumdevice
 Tracker = https://github.com/KCL-BMEIS/spectrumdevice/issues

[options]
zip_safe = False
packages = find:
package_dir =
  =spectrumdevice
include_package_data = True
install_requires =
 numpy>=1.21.4
python_requires = >=3.8

[options.packages.find]
where = spectrumdevice
exclude = tests

[options.package_data]
spectrumdevice = py.typed

[bdist_wheel]
universal = true

[aliases]
test=pytest

[options.extras_require]
test =
 pytest == 6.2.5
dev =
 flake8 == 4.0
 flake8-bugbear == 21.9.2
 black == 21.10b0
 mypy == 0.910
doc =
 pdoc == 8.0.1
examples =
 matplotlib >= 3.5.0

[mypy]
python_version = 3.8
exclude: scratch
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

# Prevent setup.py typing errors
[mypy-setup]
ignore_errors = True

# Prevent third party typing errors
[mypy-spectrum_gmbh.*]
ignore_errors = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[flake8]
exclude = .bzr,.hg,.git,__pycache__,.tox,setup.py,.eggs,spectrum_gmbh,scratch,htmlcov,.pytest_cache,.mypy_cache,.github
max-line-length = 120
application_import_names = spectrumdevice, tests
import-order-style = pycharm
ignore=E127,E126,W504,W503,F541,E501

[tool:pytest]
markers =
    integration: marks tests as an integration test (deselect with '-m "not integration"')
