[metadata]
name = spectrumdevice
description = A high-level, object-oriented Python library for controlling Spectrum Instrumentation digitisers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/KCL-BMEIS/spectrumdevice
author = Christian Baker, Francois Joubert
author_email = christian.baker@kcl.ac.uk,
license = MIT
license_file = LICENSE
classifiers =
 Development Status :: 4 - Beta
 Intended Audience :: Science/Research
 License :: OSI Approved :: MIT License
 Natural Language :: English
 Operating System :: POSIX :: Linux
 Operating System :: Microsoft :: Windows :: Windows 10
 Operating System :: MacOS :: MacOS X
 Programming Language :: Python :: 3.8
 Programming Language :: Python :: 3.9
 Programming Language :: Python :: 3.10
 Programming Language :: Python :: 3.11
 Programming Language :: Python :: 3.12
 Topic :: Scientific/Engineering
 Typing :: Typed
project_urls =
 Documentation = https://kcl-bmeis.github.io/spectrumdevice/
 Source = https://github.com/KCL-BMEIS/spectrumdevice
 Tracker = https://github.com/KCL-BMEIS/spectrumdevice/issues

[options]
zip_safe = False
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
 numpy>=1.21.4
python_requires = >=3.8

[options.packages.find]
where = src

[bdist_wheel]
universal = false

[aliases]
test=pytest

[options.extras_require]
test =
 pytest == 7.4.3
dev =
 flake8 == 6.1.0
 flake8-bugbear == 23.9.16
 black == 22.3.0
 mypy == 1.6.1
 types-setuptools == 67.8.0.0
doc =
 pdoc == 8.0.1
examples =
 matplotlib >= 3.5.0

[mypy]
python_version = 3.12
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

# Prevent setup.py typing errors
[mypy-setup]
ignore_errors = True

# Prevent third party typing errors
[mypy-spectrum_gmbh.*]
ignore_errors = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-versioneer]
ignore_errors = True

[mypy-spectrumdevice._version]
ignore_errors = True

[flake8]
exclude = .bzr,.hg,.git,__pycache__,.tox,setup.py,.eggs,spectrum_gmbh,scratch,htmlcov,.pytest_cache,.mypy_cache,.github,_version.py
max-line-length = 120
application_import_names = spectrumdevice, tests
import-order-style = pycharm
ignore=E127,E126,W504,W503,F541,E501,E203

[versioneer]
VCS = git
style = pep440
versionfile_source = src/spectrumdevice/_version.py
tag_prefix = v